--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,50 @@
+@INPROCEEDINGS{8117878,
+  author={Ramya, Paruchuri and Sindhura, Vemuri and Sagar, P. Vidya},
+  booktitle={2017 Second International Conference on Electrical, Computer and Communication Technologies (ICECCT)}, 
+  title={Testing using selenium web driver}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-7},
+  doi={10.1109/ICECCT.2017.8117878}}
+
+@misc{collier2019memoryaugmented,
+      title={Memory-Augmented Neural Networks for Machine Translation}, 
+      author={Mark Collier and Joeran Beel},
+      year={2019},
+      eprint={1909.08314},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{SILVER2021103535,
+  title = {Reward Is Enough},
+  journal = {Artificial Intelligence},
+  pages = {103535},
+  year = {2021},
+  issn = {0004-3702},
+  doi = {https://doi.org/10.1016/j.artint.2021.103535},
+  url = {https://www.sciencedirect.com/science/article/pii/S0004370221000862},
+  author = {David Silver and Satinder Singh and Doina Precup and Richard S. Sutton},
+  keywords = {Artificial Intelligence, Artificial general intelligence, Reinforcement learning, reward},
+  abstract = {In this article we hypothesise that intelligence, and its associated abilities, can be understood as subserving the maximisation of reward. Accordingly, reward is enough to drive behaviour that exhibits abilities studied in natural and artificial intelligence, including knowledge, learning, perception, social intelligence, language, generalisation and imitation. This is in contrast to the view that specialised problem formulations are needed for each ability, based on other signals or objectives. Furthermore, we suggest that agents that learn through trial and error experience to maximise reward could learn behaviour that exhibits most if not all of these abilities, and therefore that powerful reinforcement learning agents could constitute a solution to artificial general intelligence.}
+}
+
+@article{Wolfram_2020,
+   title={A Class of Models with the Potential to Represent Fundamental Physics},
+   volume={29},
+   ISSN={0891-2513},
+   url={http://dx.doi.org/10.25088/ComplexSystems.29.2.107},
+   DOI={10.25088/complexsystems.29.2.107},
+   number={2},
+   journal={Complex Systems},
+   publisher={Wolfram Research, Inc.},
+   author={Wolfram, Stephen},
+   year={2020},
+   month={Jun},
+   pages={107–536}
+}
+
 @inproceedings{Ravi2017OptimizationAA,
   title={Optimization as a Model for Few-Shot Learning},
   author={S. Ravi and H. Larochelle},
