`std` for less typing

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,87 @@
+@InProceedings{pmlr-v70-shi17a, title = {World of Bits: An Open-Domain Platform for Web-Based Agents}, author = {Tianlin Shi and Andrej Karpathy and Linxi Fan and Jonathan Hernandez and Percy Liang}, booktitle = {Proceedings of the 34th International Conference on Machine Learning}, pages = {3135--3144}, year = {2017}, editor = {Precup, Doina and Teh, Yee Whye}, volume = {70}, series = {Proceedings of Machine Learning Research}, month = {06--11 Aug}, publisher = {PMLR}, pdf = {http://proceedings.mlr.press/v70/shi17a/shi17a.pdf}, url = { http://proceedings.mlr.press/v70/shi17a.html }, abstract = {While simulated game environments have greatly accelerated research in reinforcement learning, existing environments lack the open-domain realism of tasks in computer vision or natural language processing, which operate on artifacts created by humans in natural, organic settings. To foster reinforcement learning research in such settings, we introduce the World of Bits (WoB), a platform in which agents complete tasks on the Internet by performing low-level keyboard and mouse actions. The two main challenges are: (i) to curate a large, diverse set of interesting web-based tasks, and (ii) to ensure that these tasks have a well-defined reward structure and are reproducible despite the transience of the web. To do this, we develop a methodology in which crowdworkers create tasks defined by natural language questions and provide demonstrations of how to answer the question on real websites using keyboard and mouse; HTTP traffic is cached to create a reproducible offline approximation of the web site. Finally, we show that agents trained via behavioral cloning and reinforcement learning can successfully complete a range of our web-based tasks.} }
+
+@article{ToyamaEtAl2021AndroidEnv,
+  title     = {{AndroidEnv}: A Reinforcement Learning Platform for Android},
+  author    = {Daniel Kenji Toyama and Philippe Hamel and Anita Gergely and
+               Gheorghe Comanici and Amelia Glaese and Zafarali Ahmed and Tyler
+               Jackson and Shibl Mourad and Doina Precup},
+  year      = {2021},
+  eprint    = {2105.13231},
+  archivePrefix = {arXiv},
+  primaryClass = {cs.LG},
+  volume    = {abs/2105.13231},
+  url       = {http://arxiv.org/abs/2105.13231},
+}
+
+@misc{chen2021decision,
+      title={Decision Transformer: Reinforcement Learning via Sequence Modeling}, 
+      author={Lili Chen and Kevin Lu and Aravind Rajeswaran and Kimin Lee and Aditya Grover and Michael Laskin and Pieter Abbeel and Aravind Srinivas and Igor Mordatch},
+      year={2021},
+      eprint={2106.01345},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{schmidhuber2020reinforcement,
+      title={Reinforcement Learning Upside Down: Don't Predict Rewards -- Just Map Them to Actions}, 
+      author={Juergen Schmidhuber},
+      year={2020},
+      eprint={1912.02875},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
+}
+
+@misc{du2021understanding,
+      title={Understanding and Improvement of Adversarial Training for Network Embedding from an Optimization Perspective}, 
+      author={Lun Du and Xu Chen and Fei Gao and Kunqing Xie and Shi Han and Dongmei Zhang},
+      year={2021},
+      eprint={2105.08007},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{goodfellow2015explaining,
+      title={Explaining and Harnessing Adversarial Examples}, 
+      author={Ian J. Goodfellow and Jonathon Shlens and Christian Szegedy},
+      year={2015},
+      eprint={1412.6572},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@misc{parkerholder2020effective,
+      title={Effective Diversity in Population Based Reinforcement Learning}, 
+      author={Jack Parker-Holder and Aldo Pacchiano and Krzysztof Choromanski and Stephen Roberts},
+      year={2020},
+      eprint={2002.00632},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{Gravina_2019,
+   title={Quality Diversity Through Surprise},
+   volume={23},
+   ISSN={1941-0026},
+   url={http://dx.doi.org/10.1109/TEVC.2018.2877215},
+   DOI={10.1109/tevc.2018.2877215},
+   number={4},
+   journal={IEEE Transactions on Evolutionary Computation},
+   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+   author={Gravina, Daniele and Liapis, Antonios and Yannakakis, Georgios N.},
+   year={2019},
+   month={Aug},
+   pages={603–616}
+}
+
+@misc{meyerson2017discovering,
+      title={Discovering Evolutionary Stepping Stones through Behavior Domination}, 
+      author={Elliot Meyerson and Risto Miikkulainen},
+      year={2017},
+      eprint={1704.05554},
+      archivePrefix={arXiv},
+      primaryClass={cs.NE}
+}
+
 @INPROCEEDINGS{8117878,
   author={Ramya, Paruchuri and Sindhura, Vemuri and Sagar, P. Vidya},
   booktitle={2017 Second International Conference on Electrical, Computer and Communication Technologies (ICECCT)}, 
